# dyndist

./: .travis.yml  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake
dyndist/: discrete_distribution.h  global.h  indexed_distribution.h  macros.h  rangemap.h  rng_R.h  rng_boost.h  rng_stdcxx.h  utility.h  vector_distribution.h
tests/: discrete_distribution.cpp  main.cpp  vector_distribution.cpp
